--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
-.App {
-  text-align: center;
+*{
+  font-family: 'Roboto',sans-serif;
 }
 
-.App-logo {
+/* .App {
+  text-align: center;
+} */
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
